log
Fri Mar 18 14:38:28 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bb4dc87
Fri Mar 18 14:40:32 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7d23a75
Fri Mar 18 14:41:51 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
318b6d4
Fri Mar 18 14:45:06 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:45:34: error: ‘list->current’ is a pointer; did you mean to use ‘->’?
     list->current = list->current.next;
                                  ^
                                  ->
Compilation failed
493c1e9
Fri Mar 18 14:45:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b4b126d
Fri Mar 18 14:46:40 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
336e7fc
Fri Mar 18 14:47:09 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
15aabfe
Fri Mar 18 14:47:27 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
765bcea
Fri Mar 18 14:49:10 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4982df9
Fri Mar 18 14:50:08 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
fc1a3f5
Fri Mar 18 14:50:50 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:39:8: note: declared here
 void * firstList(List * list) {
        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ac6a97e
Fri Mar 18 14:50:59 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
915e617
Fri Mar 18 14:51:34 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
d89d9e1
Fri Mar 18 14:53:23 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7e1557d
Fri Mar 18 14:53:45 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1e381db
Fri Mar 18 14:54:11 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bb88260
Fri Mar 18 14:54:38 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:23: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
     if (list->current != NULL & list->current->next != NULL)
                       ^
cc1: all warnings being treated as errors
Compilation failed
5dedc71
Fri Mar 18 14:55:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d0527ed
Fri Mar 18 14:55:38 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
a396dda
Fri Mar 18 14:56:24 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
6886373
Fri Mar 18 14:57:21 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6528d13
Fri Mar 18 14:58:18 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|5
total_score: 15/70
d2fe7c6
